--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -26,14 +26,14 @@
     
     &-headline {
         font-size: 2.5rem;
-        color: orangered;
+        //color: orangered;
         
         &--gradient {
             @include gradient-text;
             //outline: 3px solid orangered;
             //overflow-y: hidden;
             //box-shadow: 0 -1px 0 orangered;
-            box-shadow: 0 -.8px 0 $color-white;
+            //box-shadow: 0 -.8px 0 $color-white;
         }
         
         @include for-tablet-landscape-up {
@@ -62,13 +62,9 @@
         
         @include for-phones-medium-down {
             margin: 3.5rem auto;
-            width: 70%;
+            //width: 70%;
+            width: 0%;
         }
-        
-        /*@include for-tablet-portrait {
-            width: 60%;
-            margin: 0rem auto 8.5rem auto;
-        }*/
         
         @include for-tablet-landscape-up {
             width: 60%;
